Fixed the items spacing

--- a/resources/assets/sass/app/_modals.scss
+++ b/resources/assets/sass/app/_modals.scss
@@ -20,7 +20,7 @@
             border-top: 1px solid $modal-header-border-color;
         }
         .row .item-sm {
-            margin-right: $grid-gutter-width / 3;
+            margin-right: $grid-gutter-width / 6;
         }
     }
     &-footer {
